<resources>
    <string name="app_name">OnlyofficeClient</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_login_text">Login</string>
    <string name="hint_email_text">Email</string>
    <string name="hint_password_text">Password</string>
    <string name="connect_to_onlyoffice_text">Connect to ONLYOFFICE</string>
    <string name="hint_portal_text">Portal</string>
    <string name="error_input_message">Error input</string>
</resources>